# Noise-cancellation

./: .README.md.swo  .README.md.swp  .gitignore  Makefile  README.md  tap.py
Example/: FFT.c  FFT.c.save.1  hello.c  output
FFT/fftw-3.3.4/: Makefile  config.h  config.status  libtool
FFT/fftw-3.3.4/api/: Makefile
FFT/fftw-3.3.4/api/.deps/: apiplan.Plo  configure.Plo  execute-dft-c2r.Plo  execute-dft-r2c.Plo  execute-dft.Plo  execute-r2r.Plo  execute-split-dft-c2r.Plo  (+59 more)
FFT/fftw-3.3.4/dft/: Makefile
FFT/fftw-3.3.4/doc/: Makefile
FFT/fftw-3.3.4/genfft/: Makefile
FFT/fftw-3.3.4/kernel/: Makefile
FFT/fftw-3.3.4/libbench2/: Makefile
FFT/fftw-3.3.4/m4/: Makefile
FFT/fftw-3.3.4/mpi/: Makefile
FFT/fftw-3.3.4/rdft/: Makefile
FFT/fftw-3.3.4/reodft/: Makefile
FFT/fftw-3.3.4/simd-support/: Makefile
FFT/fftw-3.3.4/support/: Makefile
FFT/fftw-3.3.4/tests/: Makefile  bench
FFT/fftw-3.3.4/threads/: Makefile
FFT/fftw-3.3.4/tools/: Makefile  fftw-wisdom
PortAudio/: ._pa_stable_v19_20140130.tgz  RecordRawTest1.c  Taps.py
PortAudio/portaudio/: Makefile  config.status  libtool
ambient_sound/: sound
code/: RecordRawTest1.c  gg
example/noise_cancellation/: CMakeLists.txt
example/noise_cancellation/CMake/: FindFFTW3.cmake  FindPortAudio.cmake
example/noise_cancellation/src/: portaudio_devices.cc  portaudio_test.cc  portaudio_test2.cc  test_fft.cc
include/: FFT.h  Record.h  Weighting.h  output.h  output_files.h  test.h
output/: gg  output  test
src/: FFT.c  Record.c  RecordRawTest1.c  Weighting.c  main.c  output.c  output_files.c  test.c
(+411 files in other folders)
